# dbt_learning

learning_projet/: pyproject.toml
learning_projet/dbtlearn/: dbt_project.yml
learning_projet/dbtlearn/models/dim/: dim_hosts_cleans.sql  dim_listings_cleans.sql  dim_listings_w_hosts.sql
learning_projet/dbtlearn/models/fct/: fct_reviews.sql
learning_projet/dbtlearn/models/mart/: mart_fullmoon_reviews.sql
learning_projet/dbtlearn/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
learning_projet/dbtlearn/profile/: .user.yml  profiles.yml
