[tool.poetry]
name = "learning-projet"
version = "0.1.0"
description = ""
authors = ["iyedtkachuk <iyedtkachuk@gmail.com>"]
readme = "README.md"
packages = [{include = "learning_projet"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
